<resources>
    <string name="app_name">Sample</string>
    <string name="title_home">주소록</string>
    <string name="title_dashboard">사진</string>
    <string name="title_notes">노트</string>
    <string name="ImgDesc">My Image</string>
    <string name="save">저장</string>
    <string name="phone_number">전화번호</string>
    <string name="name">이름</string>
    <string name="name_example">홍길동</string>
    <string name="add_phone_number">전화번호 추가</string>
    <string name="title_todo">My todo list</string>
    <string name="create_todo_hint">할 일을 적어봐요</string>
    <string name="auto_fill_hint">코딩하기</string>
    <string name="delete_button_desc">Delete button</string>
    <string name="todo_text">coding</string>
    <string name="clear_button">clear_button</string>
    <string name="empty_hint">" "</string>
    <string name="create_todo_button">create_todo_button</string>
    <string name="create_todo_text">새로운 할 일</string>
    <string name="todo_title_hint">오늘 할 일</string>
    <string name="title_preview_note">노트 Preview 제목</string>
    <string name="desc_preview_note">모든 국민은 신속한 재판을 받을 권리를 가진다. 형사피고인은 상당한 이유가 없는 한 지체없이 공개재판을 받을 권리를 가진다. 광물 기타 중요한 지하자원·수산자원·수력과 경제상 이용할 수 있는 자연력은 법률이 정하는 바에 의하여 일정한 기간 그 채취·개발 또는 이용을 특허할 수 있다.

국무회의는 대통령·국무총리와 15인 이상 30인 이하의 국무위원으로 구성한다. 국가는 농업 및 어업을 보호·육성하기 위하여 농·어촌종합개발과 그 지원등 필요한 계획을 수립·시행하여야 한다.

</string>
    <string name="note_title">내 노트</string>
    <string name="create_note_button_text">메모 추가</string>
    <string name="clear_notes_button_text">모든 메모 삭제</string>
    <string name="create_todo_list_button_text">투두 추가</string>
    <string name="memo_autoFillHints">메모</string>
    <string name="memo_desc_hint">메모를 쓰자</string>
    <string name="memo_save_button_text">SAVE</string>
</resources>