<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="start|top"
    android:padding="@dimen/small_padding"
    android:layout_marginTop="60dp">

    <EditText
        android:inputType="text"
        android:id="@+id/edit_memo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/memo_autoFillHints"
        android:hint="@string/memo_autoFillHints"/>

    <EditText
        android:id="@+id/edit_memo_contents"
        android:layout_width="match_parent"
        android:layout_height="@dimen/memo_desc_height"
        android:inputType="textMultiLine"
        android:layout_gravity="start"
        android:autofillHints="@string/empty_hint"
        android:hint="@string/memo_desc_hint"/>

    <Button
        android:id="@+id/edit_memo_save"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/memo_save_button_text"/>

</LinearLayout>