<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="noteViewModel"
            type="com.example.sample.ui.notes.NoteViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/medium_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_title"
            android:textSize="@dimen/note_title_font" />


        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/create_note_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/create_note_button_text"
                tools:text="@string/create_note_button_text" />

            <Button
                android:id="@+id/clear_note_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_notes_button_text"
                tools:text="@string/clear_notes_button_text" />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/note_list"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginTop="8dp" />

    </LinearLayout>

</layout>