<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="todoViewModel"
            type="com.example.sample.ui.todo.TodoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        tools:context=".ui.todo.TodoFragment">


        <TextView
            android:id="@+id/title_todo"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/title_todo"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/todo_list"
            app:layout_constraintEnd_toStartOf="@id/clear_todo_all"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />


        <ImageButton
            android:contentDescription="@string/clear_button"
            android:id="@+id/clear_todo_all"
            android:layout_width="@dimen/small_size"
            android:layout_height="@dimen/small_size"
            android:layout_marginTop="4dp"
            android:onClick="@{() -> todoViewModel.onClear()}"
            android:src="@android:drawable/ic_menu_delete"
            app:layout_constraintStart_toEndOf="@id/title_todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_delete"
            tools:srcCompat="@android:drawable/ic_menu_delete" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todo_list"
            android:name="todo_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/create_todo"
            app:layout_constraintTop_toBottomOf="@+id/title_todo"
            tools:layout_editor_absoluteX="43dp" />

        <EditText
            android:id="@+id/create_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="32dp"
            android:autofillHints="@string/auto_fill_hint"
            android:gravity="start"
            android:hint="@string/create_todo_hint"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todo_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>