<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|top"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="80dp">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_todo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:textSize="@dimen/todo_title"
                android:textColor="@color/white"
                tools:text="@string/title_todo" />

            <EditText
                android:id="@+id/edit_title_todo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/todo_title_hint"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:hint="@string/todo_title_hint"
                android:textColor="@color/white"
                android:inputType="textMultiLine"
                android:textSize="@dimen/todo_title"
                tools:text="@string/title_todo" />

            <ImageButton
                android:id="@+id/clear_todo_all"
                android:layout_width="@dimen/medium_size"
                android:layout_height="@dimen/medium_size"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="@dimen/clear_button_margin"
                android:layout_marginStart="@dimen/clear_button_margin"
                android:background="@android:color/transparent"
                android:contentDescription="@string/clear_button"
                android:src="@android:drawable/ic_menu_delete" />
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todo_list"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginTop="8dp" />

    </LinearLayout>

</layout>